# guess_it

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-single-platform.yml
src/: guess_it.c  guess_it.h  hestia.c  hestia.h  main.c
src/validators/: validator.c  validator.h
